player is now boid
