# api/controllers/AddPlayer.js
@@ -1,14 +1,0 @@
-'use strict';
-const models = require('../models');
-
-function AddPlayer (req, res){
-  var params = req.swagger.params.player.value;
-
-  models.player.create(params).then(player => {
-    res.json(player);
-  })
-}
-
-module.exports = {
-  AddPlayer: AddPlayer
-}
